Track camera to a temporary player

--- a/finalGame/index.html
+++ b/finalGame/index.html
@@ -6,6 +6,11 @@
 	<script type="text/javascript" src="../framework/phaser.min.js"></script>
 	<script type="text/javascript" src="js/Prefabs/Characters.js"></script>
 	<script type="text/javascript" src="js/Prefabs/Player.js"></script>
+
+	<!-- temporary prefabs:
+ 	-->
+ 	<script type="text/javascript" src="js/Prefabs/temp/PlayerTEMP.js"></script>
+
 	<script type="text/javascript" src="js/Levels/SkyLevel.js"></script>
 	<script type="text/javascript" src="js/Levels/Start.js"></script>
 	<script type="text/javascript" src="js/Levels/Level1.js"></script>
