Create obstacle prefab for fuel and enemy collidables

--- a/finalGame/index.html
+++ b/finalGame/index.html
@@ -6,6 +6,7 @@
 	<script type="text/javascript" src="../framework/phaser.min.js"></script>
 	<script type="text/javascript" src="js/Prefabs/Characters.js"></script>
 	<script type="text/javascript" src="js/Prefabs/Player.js"></script>
+	<script type="text/javascript" src="js/Prefabs/Obstacle.js"></script>
 
 	<!-- temporary prefabs:
  	-->
