--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<h3 id="name"> Tayla Rund, Emma Yates, Luke Mason</h3>
 	<h1 id="CMPM 163"> CMPM 163</h1>
 
-	<a href="/finalGame/index.html">Play</a>
+	<a href="/finalGame/">Play</a>
 
 
 </body>
