--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			body {
 			  	margin: 0px;
 				overflow: hidden;
-				background-color: blue;
+				background-color: lightblue;
 			}
 		</style>
 	</head>
