Dandelion physics and gameOver fall tweening

--- a/finalGame/index.html
+++ b/finalGame/index.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8" />
 	<title>Index</title>
 	<script type="text/javascript" src="../framework/phaser.min.js"></script>
-	<script type="text/javascript" src="js/Prefabs/Characters.js"></script>
+<!-- 	<script type="text/javascript" src="js/Prefabs/Characters.js"></script>
+ -->
+	<script type="text/javascript" src="js/Prefabs/Obstacle.js"></script>
 	<script type="text/javascript" src="js/Prefabs/Player.js"></script>
 	<script type="text/javascript" src="js/Levels/SkyLevel.js"></script>
 	<script type="text/javascript" src="js/Levels/Start.js"></script>
