--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 	<h3 id="name"> Tayla Rund, Emma Yates, Luke Mason</h3>
 	<h1 id="CMPM 163"> CMPM 163</h1>
 
-	<a href="https://taylarund.github.io/finalGame/index.html">Play</a>
-
+<!-- 	<a href="https://taylarund.github.io/finalGame/index.html">Play</a>
+ -->
+	<a href="finalGame/index.html">Play</a>
 
 </body>
 </html
