--- a/finalGame/index.html
+++ b/finalGame/index.html
@@ -23,7 +23,7 @@
 	<h4>Final Project<div>Luke Mason, Tayla Rund, Emma Yates</div></h4>
 	<p>First Digital Prototype: core loop is five different "ground" levels, that are separated by a "sky" level. Press SPACE for 
 		quick switching between states. Move the player using arrow keys, try to collect/use fuel or propulsion while avoiding
-		obsticles in the sky level.</p>
+		obsticles in the sky level. Main mechanic tested is propulsion by a breeze and degeneration od lift the more the up arrow is used.</p>
 	<a href="https://github.com/TaylaRund/120Project">GitHub</a>
 </body>
 </html>
