--- a/finalGame/index.html
+++ b/finalGame/index.html
@@ -4,10 +4,9 @@
 	<meta charset="UTF-8" />
 	<title>Index</title>
 	<script type="text/javascript" src="../framework/phaser.min.js"></script>
-<!-- 	<script type="text/javascript" src="js/Prefabs/Characters.js"></script>
- -->
-	<script type="text/javascript" src="js/Prefabs/Obstacle.js"></script>
+	<script type="text/javascript" src="js/Prefabs/Characters.js"></script>
 	<script type="text/javascript" src="js/Prefabs/Player.js"></script>
+	<script type="text/javascript" src="js/Prefabs/Obstacles.js"></script>
 	<script type="text/javascript" src="js/Levels/SkyLevel.js"></script>
 	<script type="text/javascript" src="js/Levels/Start.js"></script>
 	<script type="text/javascript" src="js/Levels/Level1.js"></script>
@@ -20,10 +19,21 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+
+	<p class="view">
+		<a href="https://github.com/taylarund/120project">
+			GitHub
+		</a>
+
+	<h3 id="name"> Tayla Rund, Emma Yates, Luke Mason</h3>
+	<h1 id="CMPM 163"> CMPM 163</h1>
+
+<!-- 	<a href="https://taylarund.github.io/finalGame/index.html">Play</a>
+ -->
+	<a href="finalGame/index.html">Play</a>
+
 	<h4>Final Project<div>Luke Mason, Tayla Rund, Emma Yates</div></h4>
-	<p>First Digital Prototype: core loop is five different "ground" levels, that are separated by a "sky" level. Press SPACE for 
-		quick switching between states. Move the player using arrow keys, try to collect/use fuel or propulsion while avoiding
-		obsticles in the sky level. Main mechanic tested is propulsion by a breeze and degeneration od lift the more the up arrow is used.</p>
-	<a href="https://github.com/TaylaRund/120Project">GitHub</a>
+	<p>This prototype focuses on level setup and switching between states. To skip from one level to the next, press space. The sky level has been set up so that if the player reaches the top of the screen, the game moves on to the game over state to test the mechanic of completing a level. The player's movement in the sky level is also part of this prototype. We are testing the feel of the player's movement in the sky and the breeze mechanic that would give the player a boost as they try to get higher in the sky.</p>
+	<p>Use arrow keys to move. Press space to skip to the next level.</p>
 </body>
 </html>
