--- a/index.html
+++ b/index.html
@@ -19,21 +19,7 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-
-	<p class="view">
-		<a href="https://github.com/taylarund/120project">
-			GitHub
-		</a>
-
-	<h3 id="name"> Tayla Rund, Emma Yates, Luke Mason</h3>
-	<h1 id="CMPM 163"> CMPM 163</h1>
-
-<!-- 	<a href="https://taylarund.github.io/finalGame/index.html">Play</a>
- -->
-	<a href="finalGame/index.html">Play</a>
-
-	<h4>Final Project<div>Luke Mason, Tayla Rund, Emma Yates</div></h4>
-	<p>This prototype focuses on level setup and switching between states. To skip from one level to the next, press space. The sky level has been set up so that if the player reaches the top of the screen, the game moves on to the game over state to test the mechanic of completing a level. The player's movement in the sky level is also part of this prototype. We are testing the feel of the player's movement in the sky and the breeze mechanic that would give the player a boost as they try to get higher in the sky.</p>
-	<p>Use arrow keys to move. Press space to skip to the next level.</p>
+	<h4>Final Project<div>Tayla Rund and Emma Yates</div></h4>
+	<p>press SPACE to skip to next state, use arrow keys to move</p>
 </body>
 </html>
