add new prefabs and delete level5

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
 	<meta charset="UTF-8" />
 	<title>Index</title>
 	<script type="text/javascript" src="../framework/phaser.min.js"></script>
-	<script type="text/javascript" src="js/Prefabs/Characters.js"></script>
 	<script type="text/javascript" src="js/Prefabs/Player.js"></script>
-	<script type="text/javascript" src="js/Prefabs/Obstacles.js"></script>
+
+
+
+
+<!-- 	<script type="text/javascript" src="../taylasversion/js/Prefabs/Player.js"></script>
+ -->
+ 	<script type="text/javascript" src="js/Prefabs/Obstacles.js"></script>
+	<script type="text/javascript" src="js/Prefabs/Dandelion.js"></script>
+	<script type="text/javascript" src="js/Prefabs/Cloud.js"></script>
+	<script type="text/javascript" src="js/Prefabs/Breeze.js"></script>
+	<script type="text/javascript" src="js/Prefabs/Star.js"></script>
+
 	<script type="text/javascript" src="js/Levels/SkyLevel.js"></script>
 	<script type="text/javascript" src="js/Levels/Start.js"></script>
 	<script type="text/javascript" src="js/Levels/Level1.js"></script>
